# weekend-activity

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  config.yaml  example.config.yaml  pyproject.toml
docs/: README.md
docs/api/: README.md
docs/guides/: installation.md  usage.md
migrations/: env.py
scripts/: setup-dev.sh
scripts/systemd/: weekend-activity.service  weekend-activity.timer
src/weekend_activity/: __init__.py  cli.py  db.py  github_client.py  models.py  reporter.py  repository.py  slack.py  summarizer.py  tracker.py
tests/: test_tracker.py
